kafka_cluster/infrastructure/ingress/kafka-ui-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-ui
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: kafka-ui
          port: 8080
